# test-hls-eval-optics

./: .gitignore  Main.hs  README.md  debug.txt  hie.yaml  lsp.txt  probe-tools.txt  tmp.cabal
